# MCP_weather

./: README.md
MCP_weather/MasterClass-MCP-Agent/: README.md  openai_mcp_agent.py
MCP_weather/MasterClass-MCP-Agent/static/: script.js
MCP_weather/mcp_client/: README.md  openai_mcp_agent.py  openai_mcp_agent_standard.py  requirements.txt  weather_server.py  web_server.py
MCP_weather/mcp_client/static/: index.html
MasterClass-MCP-Agent/: mcp_servers.json  openai_mcp_agent_standard.py  requirements.txt  weather_server.py  web_server.py
MasterClass-MCP-Agent/static/: index.html  style.css
mcp_client/: langchain_client.py
mcp_client/static/: script.js
mcp_weather_service/: pyproject.toml
mcp_weather_service/src/mcp_weather_service/: __init__.py  server.py
mcp_weather_service/tests/: weather_test.py
